--- a/src/templates/done.txt.erb
+++ b/src/templates/done.txt.erb
@@ -6,6 +6,6 @@ Dear <%= admin_name %>
 
 We are glad to inform you that your message has been delivered.
 
-Teamarks
+Paperboy
 
 ---- Original Request ----
