--- a/src/templates/error.txt.erb
+++ b/src/templates/error.txt.erb
@@ -11,6 +11,6 @@ Technical details of failure:
 
 Please do not ask us to explain it, as sending you this notification is all we can do.
 
-Teamarks
+Paperboy
 
 ---- Original Request ----
